refactor: use custom BranchTree instead of TreeView to improve performance

--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -236,77 +236,12 @@
             <ToggleButton Grid.Row="0" Classes="group_expander" IsChecked="{Binding IsLocalBranchGroupExpanded, Mode=TwoWay}">
               <TextBlock Classes="group_header_label" Margin="0" Text="{DynamicResource Text.Repository.LocalBranches}"/>
             </ToggleButton>
-            <TreeView Grid.Row="1"
-                      x:Name="localBranchTree"
-                      Margin="8,0,4,0"
-                      SelectionMode="Multiple"
-                      ItemsSource="{Binding LocalBranchTrees}"
-                      IsVisible="{Binding IsLocalBranchGroupExpanded}"
-                      ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                      ScrollViewer.VerticalScrollBarVisibility="Auto"
-                      ContextRequested="OnLocalBranchContextMenuRequested"
-                      SelectionChanged="OnLocalBranchTreeSelectionChanged"
-                      PropertyChanged="OnLeftSidebarTreeViewPropertyChanged">
-              <TreeView.Styles>
-                <Style Selector="TreeViewItem" x:DataType="vm:BranchTreeNode">
-                  <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
-                  <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}"/>
-                  <Setter Property="CornerRadius" Value="{Binding CornerRadius}"/>
-                </Style>
-
-                <Style Selector="Grid.repository_leftpanel TreeViewItem /template/ Border#PART_LayoutRoot:pointerover Border#PART_Background">
-                  <Setter Property="Background" Value="{DynamicResource Brush.AccentHovered}" />
-                  <Setter Property="Opacity" Value=".65"/>
-                </Style>
-                <Style Selector="Grid.repository_leftpanel TreeViewItem:selected /template/ Border#PART_LayoutRoot Border#PART_Background">
-                  <Setter Property="Background" Value="{DynamicResource Brush.AccentHovered}" />
-                  <Setter Property="Opacity" Value="1"/>
-                </Style>
-                <Style Selector="Grid.repository_leftpanel:focus-within TreeViewItem:selected /template/ Border#PART_LayoutRoot Border#PART_Background">
-                  <Setter Property="Background" Value="{DynamicResource Brush.Accent}" />
-                  <Setter Property="Opacity" Value=".65"/>
-                </Style>
-                <Style Selector="Grid.repository_leftpanel:focus-within TreeViewItem:selected /template/ Border#PART_LayoutRoot:pointerover Border#PART_Background">
-                  <Setter Property="Background" Value="{DynamicResource Brush.Accent}" />
-                  <Setter Property="Opacity" Value=".8"/>
-                </Style>
-              </TreeView.Styles>
-              <TreeView.ItemTemplate>
-                <TreeDataTemplate ItemsSource="{Binding Children}" x:DataType="{x:Type vm:BranchTreeNode}">
-                  <Grid Height="24" ColumnDefinitions="20,*,Auto,Auto" Background="Transparent" DoubleTapped="OnDoubleTappedBranchNode" ToolTip.Tip="{Binding Tooltip}">
-                    <Path Grid.Column="0" Classes="folder_icon" Width="12" Height="12" HorizontalAlignment="Left" Margin="0,1,0,0" IsVisible="{Binding IsFolder}"/>
-                    <Path Grid.Column="0" Width="12" Height="12" HorizontalAlignment="Left" Margin="0,2,0,0" Data="{StaticResource Icons.Check}" IsVisible="{Binding IsCurrent}" VerticalAlignment="Center"/>
-                    <Path Grid.Column="0" Width="12" Height="12" HorizontalAlignment="Left" Margin="2,0,0,0" Data="{StaticResource Icons.Branch}" VerticalAlignment="Center">
-                      <Path.IsVisible>
-                        <MultiBinding Converter="{x:Static BoolConverters.And}">
-                          <Binding Path="!IsFolder"/>
-                          <Binding Path="!IsCurrent"/>
-                        </MultiBinding>
-                      </Path.IsVisible>
-                    </Path>
-
-                    <TextBlock Grid.Column="1"
-                               Text="{Binding Name}"
-                               Classes="monospace"
-                               FontWeight="{Binding IsCurrent, Converter={x:Static c:BoolConverters.BoldIfTrue}}"/>
-
-                    <Border Grid.Column="2" Margin="8,0" Height="18" CornerRadius="9" VerticalAlignment="Center" Background="{DynamicResource Brush.Badge}" IsVisible="{Binding IsUpstreamTrackStatusVisible}">
-                      <TextBlock Classes="monospace" FontSize="10" HorizontalAlignment="Center" Margin="9,0" Text="{Binding UpstreamTrackStatus}" Foreground="{DynamicResource Brush.BadgeFG}"/>
-                    </Border>
-
-                    <ToggleButton Grid.Column="3"
-                                  Classes="filter"
-                                  Margin="0,0,8,0"
-                                  Background="Transparent"
-                                  IsVisible="{Binding IsBranch}"
-                                  Checked="OnToggleFilter"
-                                  Unchecked="OnToggleFilter"
-                                  IsChecked="{Binding IsFiltered}"
-                                  ToolTip.Tip="{DynamicResource Text.Filter}"/>
-                  </Grid>
-                </TreeDataTemplate>
-              </TreeView.ItemTemplate>
-            </TreeView>
+            <v:BranchTree Grid.Row="1"
+                          x:Name="localBranchTree"
+                          Margin="8,0,4,0"
+                          Nodes="{Binding LocalBranchTrees}"
+                          IsVisible="{Binding IsLocalBranchGroupExpanded}"
+                          SelectionChanged="OnLocalBranchTreeSelectionChanged"/>
 
             <!-- Remotes -->
             <ToggleButton Grid.Row="2" Classes="group_expander" IsChecked="{Binding IsRemoteGroupExpanded, Mode=TwoWay}">
@@ -317,64 +252,12 @@
                 </Button>
               </Grid>
             </ToggleButton>
-            <TreeView Grid.Row="3"
-                      x:Name="remoteBranchTree"
-                      Margin="8,0,4,0"
-                      SelectionMode="Multiple"
-                      ItemsSource="{Binding RemoteBranchTrees}"
-                      IsVisible="{Binding IsRemoteGroupExpanded}"
-                      ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                      ScrollViewer.VerticalScrollBarVisibility="Auto"
-                      ContextRequested="OnRemoteBranchContextMenuRequested"
-                      SelectionChanged="OnRemoteBranchTreeSelectionChanged"
-                      PropertyChanged="OnLeftSidebarTreeViewPropertyChanged">
-              <TreeView.Styles>
-                <Style Selector="TreeViewItem" x:DataType="vm:BranchTreeNode">
-                  <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
-                  <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}"/>
-                  <Setter Property="CornerRadius" Value="{Binding CornerRadius}"/>
-                </Style>
-
-                <Style Selector="Grid.repository_leftpanel TreeViewItem /template/ Border#PART_LayoutRoot:pointerover Border#PART_Background">
-                  <Setter Property="Background" Value="{DynamicResource Brush.AccentHovered}" />
-                  <Setter Property="Opacity" Value=".65"/>
-                </Style>
-                <Style Selector="Grid.repository_leftpanel TreeViewItem:selected /template/ Border#PART_LayoutRoot Border#PART_Background">
-                  <Setter Property="Background" Value="{DynamicResource Brush.AccentHovered}" />
-                  <Setter Property="Opacity" Value="1"/>
-                </Style>
-                <Style Selector="Grid.repository_leftpanel:focus-within TreeViewItem:selected /template/ Border#PART_LayoutRoot Border#PART_Background">
-                  <Setter Property="Background" Value="{DynamicResource Brush.Accent}" />
-                  <Setter Property="Opacity" Value=".65"/>
-                </Style>
-                <Style Selector="Grid.repository_leftpanel:focus-within TreeViewItem:selected /template/ Border#PART_LayoutRoot:pointerover Border#PART_Background">
-                  <Setter Property="Background" Value="{DynamicResource Brush.Accent}" />
-                  <Setter Property="Opacity" Value=".8"/>
-                </Style>
-              </TreeView.Styles>
-
-              <TreeView.ItemTemplate>
-                <TreeDataTemplate ItemsSource="{Binding Children}" x:DataType="{x:Type vm:BranchTreeNode}">
-                  <Grid Height="24" ColumnDefinitions="20,*,Auto" Background="Transparent" DoubleTapped="OnDoubleTappedBranchNode" ToolTip.Tip="{Binding Tooltip}">
-                    <Path Grid.Column="0" Classes="folder_icon" Width="10" Height="10" HorizontalAlignment="Left" Margin="0,2,0,0" IsVisible="{Binding IsFolder}" VerticalAlignment="Center"/>
-                    <Path Grid.Column="0" Width="12" Height="12" HorizontalAlignment="Left" Margin="0,2,0,0" Data="{StaticResource Icons.Remote}" IsVisible="{Binding IsRemote}" VerticalAlignment="Center"/>
-                    <Path Grid.Column="0" Width="12" Height="12" HorizontalAlignment="Left" Margin="2,0,0,0" Data="{StaticResource Icons.Branch}" IsVisible="{Binding IsBranch}" VerticalAlignment="Center"/>
-
-                    <TextBlock Grid.Column="1" Text="{Binding Name}" Classes="monospace"/>
-
-                    <ToggleButton Grid.Column="2"
-                                  Classes="filter"
-                                  Margin="0,0,8,0"
-                                  Background="Transparent"
-                                  Checked="OnToggleFilter"
-                                  Unchecked="OnToggleFilter"
-                                  IsVisible="{Binding IsBranch}"
-                                  IsChecked="{Binding IsFiltered}"
-                                  ToolTip.Tip="{DynamicResource Text.Filter}"/>
-                  </Grid>
-                </TreeDataTemplate>
-              </TreeView.ItemTemplate>
-            </TreeView>
+            <v:BranchTree Grid.Row="3"
+                          x:Name="remoteBranchTree"
+                          Margin="8,0,4,0"
+                          Nodes="{Binding RemoteBranchTrees}"
+                          IsVisible="{Binding IsRemoteGroupExpanded}"
+                          SelectionChanged="OnRemoteBranchTreeSelectionChanged"/>
 
             <!-- Tags -->
             <ToggleButton Grid.Row="4" Classes="group_expander" IsChecked="{Binding IsTagGroupExpanded, Mode=TwoWay}">
@@ -455,8 +338,8 @@
                       <ToggleButton Classes="filter"
                                     Margin="0,0,8,0"
                                     Background="Transparent"
-                                    Checked="OnToggleFilter"
-                                    Unchecked="OnToggleFilter"
+                                    Checked="OnToggleTagFilter"
+                                    Unchecked="OnToggleTagFilter"
                                     IsChecked="{Binding IsFiltered}"
                                     ToolTip.Tip="{DynamicResource Text.Filter}"/>
                     </DataTemplate>
