--- a/src/Views/WorkingCopy.axaml
+++ b/src/Views/WorkingCopy.axaml
@@ -174,7 +174,7 @@
       <v:CommitMessageTextBox Grid.Row="2" Text="{Binding CommitMessage, Mode=TwoWay}"/>
 
       <!-- Commit Options -->
-      <Grid Grid.Row="3" Margin="0,6,0,0" ColumnDefinitions="Auto,Auto,*,Auto,Auto,Auto">
+      <Grid Grid.Row="3" Margin="0,6,0,0" ColumnDefinitions="Auto,Auto,Auto,*,Auto,Auto,Auto">
         <Button Grid.Column="0"
                 Classes="icon_button"
                 Width="14" Height="14"
@@ -187,12 +187,20 @@
                   Height="24"
                   Margin="12,0,0,0"
                   HorizontalAlignment="Left"
+                  IsChecked="{Binding AutoStageBeforeCommit, Mode=TwoWay}"
+                  Content="{DynamicResource Text.WorkingCopy.AutoStage}"
+                  ToolTip.Tip="{DynamicResource Text.WorkingCopy.AutoStage.Tip}"/>
+
+        <CheckBox Grid.Column="2"
+                  Height="24"
+                  Margin="12,0,0,0"
+                  HorizontalAlignment="Left"
                   IsChecked="{Binding UseAmend, Mode=TwoWay}"
                   Content="{DynamicResource Text.WorkingCopy.Amend}"/>
 
-        <v:LoadingIcon Grid.Column="3" Width="18" Height="18" IsVisible="{Binding IsCommitting}"/>
+        <v:LoadingIcon Grid.Column="4" Width="18" Height="18" IsVisible="{Binding IsCommitting}"/>
 
-        <Button Grid.Column="4"
+        <Button Grid.Column="5"
                 Classes="flat primary"
                 Content="{DynamicResource Text.WorkingCopy.Commit}"
                 Height="28"
@@ -202,7 +210,7 @@
                 HotKey="{OnPlatform Ctrl+Enter, macOS=⌘+Enter}"
                 ToolTip.Tip="{OnPlatform Ctrl+Enter, macOS=⌘+Enter}"/>
 
-        <Button Grid.Column="5"
+        <Button Grid.Column="6"
                 Classes="flat"
                 Content="{DynamicResource Text.WorkingCopy.CommitAndPush}"
                 Height="28"
