--- a/src/Views/Preference.axaml
+++ b/src/Views/Preference.axaml
@@ -229,15 +229,15 @@
                            Value="{Binding DefaultFontSize, Mode=TwoWay}"/>
 
             <TextBlock Grid.Row="4" Grid.Column="0"
-                       Text="{DynamicResource Text.Preference.Appearance.ColorOverrides}"
+                       Text="{DynamicResource Text.Preference.Appearance.ThemeOverrides}"
                        HorizontalAlignment="Right"
                        Margin="0,0,16,0"/>
             <TextBox Grid.Row="4" Grid.Column="1"
                      Height="28"
                      CornerRadius="3"
-                     Text="{Binding ColorOverrides, Mode=TwoWay}">
+                     Text="{Binding ThemeOverrides, Mode=TwoWay}">
               <TextBox.InnerRightContent>
-                <Button Classes="icon_button" Width="30" Height="30" Click="SelectColorSchemaFile">
+                <Button Classes="icon_button" Width="30" Height="30" Click="SelectThemeOverrideFile">
                   <Path Data="{StaticResource Icons.Folder.Open}" Fill="{DynamicResource Brush.FG1}"/>
                 </Button>
               </TextBox.InnerRightContent>
