--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -240,6 +240,11 @@
     <Setter Property="FontWeight" Value="Bold"/>
     <Setter Property="Margin" Value="10,0,0,0"/>
   </Style>
+  <Style Selector="TextBlock.table_header">
+    <Setter Property="Foreground" Value="{DynamicResource Brush.FG1}"/>
+    <Setter Property="Opacity" Value=".65"/>
+    <Setter Property="FontWeight" Value="Bold"/>
+  </Style>
   <Style Selector="TextBlock.info_label">
     <Setter Property="Foreground" Value="{DynamicResource Brush.FG2}"/>
     <Setter Property="FontWeight" Value="Bold"/>
