--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -1002,7 +1002,7 @@
     <Setter Property="VerticalAlignment" Value="Stretch"/>
     <Setter Property="Template">
       <ControlTemplate>
-        <Grid ColumnDefinitions="Auto,*">
+        <Grid ColumnDefinitions="Auto,*" Background="Transparent">
           <Path Grid.Column="0"
                 x:Name="PART_IndicatorIcon"
                 Width="10"
@@ -1072,6 +1072,7 @@
     <Setter Property="Margin" Value="0" />
     <Setter Property="Width" Value="8" />
     <Setter Property="Height" Value="8" />
+    <Setter Property="Background" Value="Transparent"/>
     <Setter Property="Template">
       <ControlTemplate>
         <Border Background="Transparent"
@@ -1224,8 +1225,7 @@
                                 Classes="tree_expander"
                                 Focusable="False"
                                 HorizontalAlignment="Center"
-                                IsChecked="{TemplateBinding IsExpanded, Mode=TwoWay}"
-                                IsHitTestVisible="False" />
+                                IsChecked="{TemplateBinding IsExpanded, Mode=TwoWay}"/>
                 </Panel>
                 <ContentPresenter Name="PART_HeaderPresenter"
                                   Grid.Column="1"
